# rust-gpu-shaders

./: Cargo.toml  flake.nix  rust-toolchain.toml
crates/dfutils/: Cargo.toml
crates/dfutils/src/: gridref.rs  primitives_enum.rs  sdf.rs
crates/dfutils/src/primitives/: cross.rs  disk.rs  line_segment.rs  plane.rs  ray.rs  rectangle.rs  torus.rs
runner/: Cargo.toml
runner/src/: controller.rs  shader.rs
runner/src/egui_components/: repetition.rs
runner/src/shaders/: fun_rep_demo.rs  hydrogen_wavefunction.rs  koch_snowflake.rs  mandelbrot.rs  procedural_generation.rs  ray_marching.rs  ray_marching_2d.rs  sdfs_2d.rs  sdfs_3d.rs  sierpinski_triangle.rs  spherical_harmonics.rs  spherical_harmonics_shape.rs
runner/src/shaders/sdf_builder/: mod.rs
shaders/hydrogen-wavefunction/src/: lib.rs
shaders/procedural-generation/: Cargo.toml
shaders/procedural-generation/src/: lib.rs
shaders/sdfs-2d/src/: lib.rs
shaders/sdfs-3d/src/: lib.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: interpreter.rs  lib.rs  numeric_integration.rs  push_constants.rs  sdf_2d.rs  sdf_3d.rs  sdf_interpreter.rs  spherical_harmonics.rs  stack.rs
shaders/shared/src/functional/: array.rs  vec.rs
shaders/shared/src/push_constants/: hydrogen_wavefunction.rs  procedural_generation.rs  sdf_builder.rs  sdfs_3d.rs
shaders/shared/src/sdf_2d/: fractal.rs  grid.rs  ops.rs  specialization.rs
shaders/shared/src/sdf_3d/: specialization.rs
shaders/sierpinski-triangle/src/: lib.rs
shaders/spherical-harmonics-shape/src/: lib.rs
shaders/spherical-harmonics/src/: lib.rs
