[workspace]
resolver = "2"
members = [
  "runner",
  "runner/builder",
  "crates/dfutils",
  "shaders/mandelbrot",
  "shaders/ray-marching",
  "shaders/ray-marching-2d",
  "shaders/koch-snowflake",
  "shaders/sierpinski-triangle",
  "shaders/sdfs-2d",
  "shaders/sdfs-3d",
  "shaders/hydrogen-wavefunction",
  "shaders/spherical-harmonics",
  "shaders/spherical-harmonics-shape",
  "shaders/fun-rep-demo",
  "shaders/sdf-builder",
  "shaders/procedural-generation",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = { version = "1.25.0", default-features = false }
glam = { version = "0.31.0", default-features = false }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "08f98a7335ae7e2ac4ec9423a9b1acf9270f2a65"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "08f98a7335ae7e2ac4ec9423a9b1acf9270f2a65"

[profile.dev]
package.spirv-tools-sys.opt-level = 1
