[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spirv-std = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
dfutils = { path = "../../crates/dfutils", default-features = false, features = [
  "libm",
] }

[target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
strum = { version = "0.26.2", features = ["derive"] }
winit = { version = "0.29.15", default-features = false }
rayon = "1.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
